src/test/deca/codegen/invalid/intermediaire2/arithmetiques/01overflowMinus.deca
// Description:
//    Programme minimaliste testant le débordement de valeur lors d'une soustraction
//
// Resultats:
//    01overflowMinus.expected
//
// Historique:
//    cree le 08/06/2022

{
    int x = 0;
    x = x - 2147483647;
    x = x - 2;
}